[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
indent-width = 4

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["lmflow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"